--- a/sample/index.html
+++ b/sample/index.html
@@ -8,7 +8,7 @@
 	<h1>Welcome to My Page!</h1>
 
 	<figure>
-		<img src="img.jpg" width="200px" height="200px" alt="me">
+		<img src="img.jpg" width="30%" height="30%" alt="me">
 	</figure>
 
 	<section>
